--- a/index.html
+++ b/index.html
@@ -1,10 +1,153 @@
 <!DOCTYPE html>
-<html lang>
+<html lang="en-US">
 <meta charset="utf-8">
-<title>...</title>
+<title>Rise In Power mural web reproduction</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="seashell">
-<meta name="description" content="...">
+<meta name="theme-color" content="whitesmoke">
+<meta name="description" content=">Web mural of RIP street mural in Clarion Alley">
 <link rel="stylesheet" href="wall.css">
 <link rel="help" href="https://github.com/webmural/wall">
 <link rel="icon" href="icon.svg">
+
+<article class="alley">
+  <header class="radio">
+    <h1>Rise In Power mural web reproduction</h1>
+  </header>
+  <blockquote class="slate">
+    <figure class="mural">
+      <em class="mantra blood rip z:8">
+        <span>RISE</span>
+        <span>IN</span>
+        <span>POWER</span>
+      </em>
+      <div class="flag" role="grid" aria-label="American flag">
+        <div class="grasp">
+          <div class="just people">
+            <div class="stripe z:6" role="row">AMILCARPEREZLOPEZSAMUELDUBOCEMIRIAMCAREYBRENDON</div>
+            <div class="stripe z:5" role="row">GLENNANTONIOZAMBRANOMONTESREKIABOYDHECTORMOREJON</div>
+            <div class="stripe z:4" role="row">FREDDIEGRAYJORDANBAKERSHANTELDAVISMALISSAWILLIAMSAKAI</div>
+            <div class="stripe z:3" role="row">GURLEYERICGARNERISRAELHERNANDEZLLACHCHARLYKEUNANG</div>
+            <div class="stripe z:2" role="row">TARIKAWILSONMICHAELBROWNCHRISTIANSIQUEIROSOSCARGRANT</div>
+            <div class="stripe z:1" role="row">SANDRABLANDOSCARRAMIREZWALTERSCOTTJONATHANFERREL</div>
+          </div>
+        </div>
+        <div class="grasp">
+          <div class="juxt people">
+            <div class="stripe z:7" role="row">TAMIRRICEJOHNCRAWFORDEZELLFORD</div>
+            <div class="stripe z:6 " role="row">AIYANASTANLEYJONESBERNARDMOORE</div>
+            <div class="stripe z:5" role="row">RICARDODIAZZEFERINOYVETTESMITH</div>
+            <div class="stripe z:4" role="row">MANSURBELLBEYLARRYJACKSONJR</div>
+            <div class="stripe z:3" role="row">JESSICAHERNANDEZSHELDONHALEK</div>
+            <div class="stripe z:2" role="row">ALEXNIETOOSHAINEEVANSDONALDIVY</div>
+            <div class="stripe z:1" role="row">KATHRYNJOHNSTON&amp;COUNTLESSMORE</div>
+          </div>
+          <div class="union z:8" role="grid">
+            <div class="police" role="row">
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+            </div>
+            <div class="police" role="row">
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+            </div>
+            <div class="police" role="row">
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+            </div>
+            <div class="police" role="row">
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+            </div>
+            <div class="police" role="row">
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+            </div>
+            <div class="police" role="row">
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+            </div>
+            <div class="police" role="row">
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+            </div>
+            <div class="police" role="row">
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+            </div>
+            <div class="police" role="row">
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+              <svg viewbox="0 0 48 48" width="1rem"><title>badge</title><use href="#star" /></svg>
+            </div>
+          </div>
+        </div>
+      </div>
+      <em class="mantra blood fam z:8">
+        <span class="bro">BROTHERS</span>
+        <span class="and">and</span>
+        <span class="sis">SISTERS</span>
+      </em>
+    </figure>
+  </blockquote>
+  <figure hidden>
+    <svg viewbox="0 0 48 48">
+      <title>7 point police star</title>
+      <polygon
+        id="star"
+        points="24,48 14,38 2,38 8,26 0,16 10,10 12,0 24,8 36,0 38,10 48,16 40,26 46,38 34,38 24,48"
+      />
+    </svg>
+  </figure>
+  <footer class="about">
+    <br role="presentation">
+    <p>
+    <a href="https://clarionalleymuralproject.org/mural/rise-in-power/" rel="noopener"><cite>Rise In Power</cite></a>
+    is a Clarion Alley street mural in San Francisco created by
+    <a href="https://clarionalleymuralproject.org/artist/jose-v-guerra-awe/" rel="noopener">José V. Guerra Awe</a> in 2016.
+    This responsive web mural reproduces the street mural in sentiment and detail.
+    Names on the mural are people of color killed by police.
+    Shaping and shading tweaks were made to help a11y.
+    Its semantic HTML and <a href="wall.css">pensive CSS</a> were coded <a href="https://github.com/webmural">@webmural</a> by <a href="https://github.com/ryanve">@ryanve</a>
+    <blockquote class="motive" cite="https://clarionalleymuralproject.org/mural/rise-in-power/">
+      <h4>José V. Guerra Awe:</h4>
+      <p><cite>Rise In Power</cite> depicts an inverted American flag with black and white stripes to give the impression that information is being put down in black and white. The location of the mural is directly across the street from the San Francisco Mission District Police Station. The names within the stripes are those of a small fraction of unarmed Hispanic and African American civilians that have been murdered by the police throughout the US, over the past several years.
+      <p>The lack of spaces between the names represent: 1) These murders appear to be a perpetual cycle, and are almost common place; 2) These are all one people; they suffered the same fate; and 3) In the eyes of racist and corrupt police officers, they are one people: they are black or brown, which to them equals: criminal.
+      <p>The use of the inverted American flag (an international symbol of distress) features stars in the shape and color of police stars, providing a point of entry for discussion about the Police State that the USA finds itself in currently, as well as a protest against police brutality and abuse of power. Moreover, the mural is a memorial, for the people whose names comprise every stripe, and the near countless more that have been, and continue to be, murdered by the police, throughout the country. Thus it reads:
+      <blockquote>Rise in Power, Brothers and Sisters.</blockquote>
+      <p>The phrase <i>Rise in Power</i> was used in place of <i>Rest in Peace</i> for two reasons:
+        1) there was nothing peaceful about how these people died; and
+        2) <i>Rest in Peace</i> implies closure, and until the police officers who murdered these people are brought to justice and tried as criminals, there is no closure for those who have been murdered at the hands of the police or for their families. And for society on a whole, there will never be closure until we eradicate systemic racism.
+    </blockquote>
+  </footer>
+</article>
